--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
     <h1>Character counter</h1>
-    <textarea class="text" placeholder="Enter anythiing to count"></textarea>
+    <textarea class="text" placeholder="Enter anything to count"></textarea>
     <div class="result"></div>
     <script src="script.js"></script>
     </div>
